# closure-os

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
docs/: backlog.md
examples/: brainstorm.md  contract.md
src/pcos/: calendar.py  cli.py  clipboard_watcher.py  config.py  contract_generator.py  contracts.py  github.py  issues.py  llm.py  obsidian.py  parser.py  prompts.py  renderers.py  scheduler.py
